seaqt/QtCore/gen_qreadwritelock.h

class QBasicReadWriteLock;
class QDeadlineTimer;
class QReadLocker;
class QReadWriteLock;
class QWriteLocker;
typedef struct QBasicReadWriteLock QBasicReadWriteLock;
typedef struct QDeadlineTimer QDeadlineTimer;
typedef struct QReadLocker QReadLocker;
typedef struct QReadWriteLock QReadWriteLock;
typedef struct QWriteLocker QWriteLocker;
QBasicReadWriteLock* QBasicReadWriteLock_new();
void QBasicReadWriteLock_lockForRead(QBasicReadWriteLock* self);
bool QBasicReadWriteLock_tryLockForRead(QBasicReadWriteLock* self);
bool QBasicReadWriteLock_tryLockForRead_timeout(QBasicReadWriteLock* self, QDeadlineTimer* timeout);
void QBasicReadWriteLock_lockForWrite(QBasicReadWriteLock* self);
bool QBasicReadWriteLock_tryLockForWrite(QBasicReadWriteLock* self);
bool QBasicReadWriteLock_tryLockForWrite_timeout(QBasicReadWriteLock* self, QDeadlineTimer* timeout);
void QBasicReadWriteLock_unlock(QBasicReadWriteLock* self);
void QBasicReadWriteLock_lock(QBasicReadWriteLock* self);
void QBasicReadWriteLock_lock_shared(QBasicReadWriteLock* self);
bool QBasicReadWriteLock_try_lock(QBasicReadWriteLock* self);
bool QBasicReadWriteLock_try_lock_shared(QBasicReadWriteLock* self);
void QBasicReadWriteLock_unlock_shared(QBasicReadWriteLock* self);
QReadWriteLock* QReadWriteLock_new();
QReadWriteLock* QReadWriteLock_new_recursionMode(int recursionMode);
bool QReadWriteLock_tryLockForRead(QReadWriteLock* self, int timeout);
bool QReadWriteLock_tryLockForWrite(QReadWriteLock* self, int timeout);
QReadLocker* QReadLocker_new(QReadWriteLock* readWriteLock);
void QReadLocker_unlock(QReadLocker* self);
void QReadLocker_relock(QReadLocker* self);
QReadWriteLock* QReadLocker_readWriteLock(const QReadLocker* self);
QWriteLocker* QWriteLocker_new(QReadWriteLock* readWriteLock);
void QWriteLocker_unlock(QWriteLocker* self);
void QWriteLocker_relock(QWriteLocker* self);
QReadWriteLock* QWriteLocker_readWriteLock(const QWriteLocker* self);